--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
-.left{
-  /* display: flex;
-  justify-content: flex-start; */
+/*.left{
+  display: flex;
+  justify-content: flex-start;
   float: left;
 }
 
 .right{
-  /* display: flex;
-  justify-content: flex-end; */
+  display: flex;
+  justify-content: flex-end;
   float: right;
-}
+}*/
